--- a/.gitignore
+++ b/.gitignore
@@ -197,8 +197,9 @@ ENV/
 # mypy
 .mypy_cache/
 
-# Unencrypted files needs to be ignored, so let's start with ignoring all *.txt files
+# Unencrypted files needs to be ignored, so let's start with ignoring all *.txt and *.yaml files
 *.txt
+*.yaml
 
 # Some files in the .gitsecret/keys directory that probably shouldn't be included
 S.gpg-agent*
